Changed nav bar alignment and UI Fixes

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,17 +1,14 @@
 .app-main {
-    .data-group {
-        display: flex;
-        margin-top: 3px;
-        .left-nav {
-            width:25%;
-            height: 100%;
-            background-color: #79c6d1;
-            margin-right: 10px;
-            box-shadow: 1px 1px 1px #a7cbd0;
-        }
-        .data-table {
-            width: 75%;
-            height: 100%;
-        }
-    }
+    margin: 0 10%;
+    box-shadow: 1px 1px 1px 1px #cccaca;
+
+    // .left-nav {
+    //     width:25%;
+    //     height: 100%;
+    // }
+    // .data-table {
+    //     width: 75%;
+    //     height: 100%;
+    // }
+    
 }
