--- a/src/app/data-table/data-table.component.less
+++ b/src/app/data-table/data-table.component.less
@@ -1,7 +1,8 @@
-example-container {
+.example-container {
   display: flex;
   flex-direction: column;
   min-width: 300px;
+  margin: 0 30px;
 }
 
 .mat-table {
@@ -14,7 +15,7 @@ example-container {
 }
 
 .cdk-visually-hidden {
-    display: none;
+  display: none;
 }
 
 .example-margin {
