--- a/src/app/left-nav/left-nav.component.less
+++ b/src/app/left-nav/left-nav.component.less
@@ -1,17 +1,19 @@
 .left-nav-main {
+    background-color: #79c6d1;
+    margin-bottom: 10px;
+    
     .left-nav-title {
         color: #5c5c7d;
-        font-size: 15px;
+        font-size: 10px;
         margin-left: 5px;
     }
     .left-nav-coin-list {
         list-style: none;
+        display: inline-flex;
     }
     .left-nav-coin-item {
-        margin-bottom: 10px;
         cursor: pointer;
-        margin-left: 15%;
-
+        margin-right: 20px;
         a {
             vertical-align: super;
             img, span {
